--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="alarmaTres">Alarma Trabajo</string>
     <string name="alarmaTresHora">07:00 AM</string>
     <string name="alarmaTrestemp">≥ 10 °C</string>
+    <string name="crearalarma">Crear alarma</string>
+    <string name="nombredealarma">Nombre de la alarma</string>
 </resources>
