Se agrega toda la funcionalidad de navegacion y el resto de pantallas faltantes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="alarmaTrestemp">≥ 10 °C</string>
     <string name="crearalarma">Crear alarma</string>
     <string name="nombredealarma">Nombre de la alarma</string>
+    <string name="historial_de_alarmas">Historial de Alarmas</string>
 </resources>
